force-app/main/default/objects/AdvisoryMessage__c/AdvisoryMessage__c.object-meta.xml
<CustomObject>
    <label>Advisory Message</label>
    <nameField>
        <label>Advisory Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advisory Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>