force-app/main/default/objects/AdvisoryMessage__c/fields/AIGeneratedFlag__c.field-meta.xml
<CustomField>
    <fullName>AIGeneratedFlag__c</fullName>
    <label>AIGeneratedFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>