force-app/main/default/objects/AdvisoryMessage__c/fields/ClientImpact__c.field-meta.xml
<CustomField>
    <fullName>ClientImpact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Impact</label>
    <referenceTo>ClientImpact__c</referenceTo>
    <relationshipLabel>Advisory Messages</relationshipLabel>
    <relationshipName>Advisory_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>