force-app/main/default/objects/AdvisoryMessage__c/fields/MessageBody__c.field-meta.xml
<CustomField>
    <fullName>MessageBody__c</fullName>
    <label>Message Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>