force-app/main/default/objects/AdvisoryMessage__c/fields/SentAt__c.field-meta.xml
<CustomField>
    <fullName>SentAt__c</fullName>
    <label>SentAt</label>
    <type>DateTime</type>
</CustomField>